Bug 998742 - Switch to MOZ_LITTLE_ENDIAN, and assert correctness. - r=bjacob